tests/negative/test_raw_cn_elem_asgn.orb
fnc main () () {
    eval (sym (a:(raw cn) \(\() \())));
    = ([] a 0) \();
};